# juggy

./: .coverage  .gitignore  Makefile  README.md  config.json.example  dotenv.example  juggy.sh  pyproject.toml
juggy/: algo.py  config.py  constants.py  hevy.py  main.py  util.py
tests/: scratch.ipynb  test_algo.py  test_hevy.py  test_main.py  test_util.py
