[tool.poetry]
name = "juggy"
version = "0.1.0"
description = "Juggernaut API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
requests = "^2.32.3"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.1.8"

[tool.ruff]
line-length = 120
target-version = "py39"

# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`), and more
select = ["E", "F", "I", "N", "W", "B", "COM", "C4", "UP", "RUF"]
ignore = ["COM812"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
