[tool.poetry]
name = "juggy"
version = "0.1.0"
description = "Juggernaut API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
requests = "^2.32.3"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.1.8"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"

[tool.ruff]
line-length = 120
target-version = "py312"

# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`), and more
select = ["E", "F", "I", "N", "W", "B", "COM", "C4", "UP", "RUF"]
ignore = ["COM812"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
